--- a/app/src/main/res/layout/layout_item_title.xml
+++ b/app/src/main/res/layout/layout_item_title.xml
@@ -21,6 +21,7 @@
 
     <TextView
         android:id="@+id/tvTitle"
+        android:background="@android:color/holo_red_dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
