--- a/app/src/main/res/layout/layout_item_test.xml
+++ b/app/src/main/res/layout/layout_item_test.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:padding="20dp"
-    android:orientation="vertical">
-<TextView
-   android:id="@+id/tv"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-</LinearLayout>
+    xmlns:tools="http://schemas.android.com/tools"
+ >
+
+    <TextView
+        android:id="@+id/tv"
+        tools:text="测试"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center" />
+</FrameLayout>
